--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -19,9 +21,29 @@
       },
       {
         "command": "BOJ-EX.headerComment",
-        "title": "BOJ: Header Comment"
+        "title": "BOJ: Insert Header Comment"
+      },
+      {
+        "command": "BOJ-EX.createProblem",
+        "title": "BOJ: Create Problem File"
       }
-    ]
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "BOJ-extension",
+      "properties": {
+        "BOJ.author": {
+          "type": "string",
+          "default": "",
+          "description": "백준에서 사용하는 아이디를 적어주세요"
+        },
+        "BOJ.extension": {
+          "type": "string",
+          "default": "",
+          "description": "선호하는 언어의 확장자명을 적어주세요 (ex: cpp, java, py)"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
