add LICENSE, edit package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "BOJ-EX",
   "displayName": "BOJ-extension",
-  "description": "",
-  "version": "0.0.1",
+  "description": "백준 온라인 저지를 할때 편리할법한 기능을 제공합니다.",
+  "repository": "https://github.com/dltkdgns00/BOJ-extension",
+  "author": "ckcks12 <wyoducc@gmail.com>",
+  "license": "MIT",
+  "publisher": "dltkdgns00",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.80.0"
   },
+  "keywords": [
+    "solvedac",
+    "BOJ",
+    "acmicpc",
+    "백준",
+    "baekjoon"
+  ],
   "categories": [
     "Other"
   ],
