runTestCase c, c++, java, js, rust, python 지원 맥북테스트 완료

--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
 				"title": "BOJ: Create Problem File"
 			},
 			{
+				"command": "BOJ-EX.runTestCase",
+				"title": "BOJ: Run TestCase"
+			},
+			{
 				"command": "BOJ-EX.pushToGithub",
 				"title": "BOJ: Push to Github"
 			},
