--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"author": "dltkdgns00 <dltkdgns00.dev@gmail.com>",
 	"license": "MIT",
 	"publisher": "dltkdgns00",
-	"version": "1.3.2",
+	"version": "1.3.3",
 	"engines": {
 		"vscode": "^1.80.0"
 	},
@@ -29,35 +29,35 @@
 		"commands": [
 			{
 				"command": "BOJ-EX.showProblem",
-				"title": "BOJ: Show Problem"
+				"title": "BOJ: 문제 보기"
 			},
 			{
 				"command": "BOJ-EX.headerComment",
-				"title": "BOJ: Insert Header Comment"
+				"title": "BOJ: 헤더 코멘트 삽입"
 			},
 			{
 				"command": "BOJ-EX.createProblem",
-				"title": "BOJ: Create Problem File"
+				"title": "BOJ: 문제 생성"
 			},
 			{
 				"command": "BOJ-EX.runTestCase",
-				"title": "BOJ: Run Test Case"
+				"title": "BOJ: 테스트 케이스 실행"
 			},
 			{
 				"command": "BOJ-EX.pushToGithub",
-				"title": "BOJ: Push to Github"
+				"title": "BOJ: Github에 푸시"
 			},
 			{
 				"command": "BOJ-EX.makeWorkflow",
-				"title": "BOJ: Make Workflow"
+				"title": "BOJ: 워크플로우 생성"
 			},
 			{
 				"command": "BOJ-EX.showManual",
-				"title": "BOJ: Show Manual"
+				"title": "BOJ: 매뉴얼 보기"
 			},
 			{
 				"command": "BOJ-EX.submitProblem",
-				"title": "BOJ-EX: 백준 문제 제출 페이지 열기"
+				"title": "BOJ: 백준 문제 제출 페이지 열기"
 			}
 		],
 		"configuration": {
